# kcanotify_h5-master

./: README.md  build.gradle  gradle.properties
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: akashi_data.json  expedition.json  main-en.html  main-jp.html  main-ko.html  main-scn.html  main-tcn.html  quests-en.json  quests-jp.json  xwalk-command-line
app/src/main/jni/: native-lib.cpp
app/src/main/jni/netguard/: dns.c  ip.c  netguard.c  tcp.c
app/src/main/jnilib/arm64-v8a/: cwebp  dwebp  img2webp_example  webpinfo_example  webpmux_example
app/src/main/jnilib/armeabi-v7a/: cwebp  dwebp  img2webp_example  webpinfo_example  webpmux_example
app/src/main/jnilib/x86/: cwebp  dwebp  img2webp_example  webpinfo_example  webpmux_example
app/src/main/jnilib/x86_64/: cwebp  dwebp  img2webp_example  webpinfo_example  webpmux_example
app/src/main/res/layout/: activity_akashi_filter.xml  activity_game_webview.xml  activity_game_webview_ori.xml  activity_mod_webview.xml  activity_tool_list.xml  activity_vpn_main.xml  listview_quest_item.xml  view_chat_item.xml  view_dialog_chat.xml  view_excheck_list.xml  view_quest_list_v2.xml
app/src/main/res/menu/: main.xml  shipinfo.xml
app/src/main/res/values/: array.xml  colors.xml  strings.xml  styles.xml
app/src/main/res/values-ja/: strings.xml
app/src/main/res/values-ko/: strings.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/main/res/values-zh-rTW/: strings.xml
app/src/main/res/xml/: advance_network_settings.xml  pref_settings.xml
(+122 files in other folders)
